--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -21,8 +21,8 @@
     }
    </style> -->
 </head>
-<body>
-
+<body class="body">
+  <img src="{% static 'main/img/universe.jpg' %}" class="background">
   {#  display: flex для того, чтобы сайд бай и основной контент были одинаковой высоты#}
   <div class="container-my">
 
